OPA_repo.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sallowedimagerepo
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedImageRepo
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedimagerepo

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          container := input.review.object.spec.containers[_]
          not startswith(container.image, "docker.io/kishan7sep/public")
          msg := sprintf("Container image '%v' is not allowed, must come from 'docker.io/kishan7sep/'", [container.image])
        }
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedImageRepo
metadata:
  name: require-repo
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
